# Tool.Agnes-AI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  KEYWORDS.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
.agent/memory/: lessons.md  loop_state.md  pitfalls.md
.agent/rules/: agents.toon  confirmation_gate.toon  core.agents.toon  cross_validation.toon  harness.toon  memory.toon  qa_validation.toon  security.toon  security_policies.toon  token_economy.toon  verification.toon
.claude/skills/teamwork-preview/: SKILL.md
.github/workflows/: release.yml
Docs/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_MEMORY_SYSTEM.md  03_QA_AUTOPILOT.md  04_TOKEN_ECONOMY.md  05_SECURITY_MODEL.md  06_AGENT_TEAM.md  07_UI_SPEC.md  08_ROADMAP.md  09_QA_REPORT.md  10_TEST_INFRA.md  11_TEST_READY.md
src-tauri/: Cargo.toml  build.rs
src-tauri/.agent/rules/: core.agents.toon
src-tauri/src/: agent.rs  agnes.udl  config.rs  db.rs  diffview.rs  key_rotation.rs  lib.rs  locale.rs  loop_engine.rs  main.rs  mcp.rs  memory.rs  mobile.rs  multimodal.rs  no_window.rs  orchestrator.rs  parallel.rs  rate_limiter.rs  sandbox.rs  skills.rs  sub_agent.rs  tests_integration.rs  ui_chat.rs  ui_panels.rs  ui_theme.rs  validation.rs  worktree.rs
src-tauri/tests/: e2e_tests.rs  red_team.rs
src-tauri/tests/fixtures/qa_corpus/E_ARGS/: args_fail.json
src-tauri/tests/fixtures/qa_corpus/E_COMPILE/: compile_fail.json
src-tauri/tests/fixtures/qa_corpus/E_DESTRUCT/: destruct_fail.json
src-tauri/tests/fixtures/qa_corpus/E_PATH/: dummy_sample.json  path_fail.json
src-tauri/tests/fixtures/qa_corpus/E_PROGRAM/: program_fail.json
src-tauri/tests/fixtures/qa_corpus/E_SCHEMA/: schema_fail.json
src-tauri/tests/fixtures/qa_corpus/E_SECRET/: secret_fail.json
src-tauri/tests/fixtures/qa_corpus/E_SHELL/: shell_fail.json
ui/: index.html  main.js  style.css
